Changes made from the "0.7.0" release to the "0.8.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Character codes out of range are now rejected when GLC_UCS1 or GLC_UCS2 are
  enabled. GLC_PARAMETER_ERROR is then raised.
- Fixed a bug that crashed QuesoGLC when trying to call glcGetFontMap() with a
  character not mapped in the font.
- Fixed a bug which caused the measurement caches not to be updated when
  GLC_RESOLUTION was changed by the users.
- Fixed a memory leak in the management of the texture atlas: when a font was
  deleted, the memory allocated to this font in the atlas was definitely lost
  instead of being given back to the texture allocator.
- Fixed a bug which did not include trailing spaces in the calculation of
  bounding boxes.
- Fixed a bug which caused artifacts when rendering glyphes that extend beyond
  the EM square.
- Fixed a bug which prevented letters l and i to be displayed at small scales
  when GLC_HINTING_QSO and GLC_TEXTURE were enabled.
- Side effect of the above bug fix : the antialiasing is improved for most
  characters since they are no longer located against the edges of the texture.
- Fixed a bug in glcGenFontID() which could return the ID of an existing font.
- Fixed a race condition in glcGenContext()
- Function glcGetStringCharMetric() now returns metrics in global string
  coordinates (otherwise the kerning can not be measured)
- Fixed bug #1987563 (Kerning does not work when GLC_GL_OBJECTS is enabled)
  Thanks to GenPFault for the bug report.
- Fixed bug #2012579 (Mac OSX Leopard compiling bug) - Thanks to Michael Strobel
  and Tim Baumgartner for the bug report and the patch.
- Fixed bug #1980982 (Checks for MinGW in the configure script are incomplete)
- Feature request #1947346 : added files for pkg-config (thanks to Giel
  van Shijndel and Dennis Schridde for providing them)
- Fixed bug #1947464 (Warnings are generated when compiling with gcc option