@@ -3,6 +3,9 @@ Changes made from the "0.7.0" release to the "0.8.0" release:
 
 * Bertrand Coconnier:
 
+- Fixed glcGetFontMap() and glcGetMasterMap() so that their return is not null
+  when a character is mapped in the font/master but its Unicode name is not
+  stored in QuesoGLC database.
 - Character codes out of range are now rejected when GLC_UCS1 or GLC_UCS2 are
   enabled. GLC_PARAMETER_ERROR is then raised.
 - Fixed a bug that crashed QuesoGLC when trying to call glcGetFontMap() with a
